Fix spacing issue on profile change

--- a/styles/main.sass.css
+++ b/styles/main.sass.css
@@ -749,7 +749,7 @@ footer {
     .filter .event-type {
       padding-left: 1rem; }
   .user {
-    padding: 2.75rem 2rem; }
+    padding: 2.9rem 2rem; }
     .user .user-photo {
       height: 6rem;
       margin-left: 12%;
